Don't use those Sun-internal Base64 calls
git-svn-id: https://svn.eu.apache.org/repos/asf/roller/trunk@550062 13f79535-47bb-0310-9956-ffa450edef68